--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -12,3 +12,16 @@
     font-weight: 700;
     text-decoration: underline;
 }
+
+.btn-clear-cart {
+    width: 90%;
+    height: 56px;
+    font-size: 21px;
+    margin: 10px auto;
+    background: #FF3030;
+    border-radius: 4px;
+    color: #FFFFFF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
