--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -11,3 +11,16 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
 }
+
+.btn-review {
+    width: 90%;
+    height: 56px;
+    font-size: 21px;
+    margin: 10px auto;
+    background: #FF9900;
+    border-radius: 4px;
+    color: #FFFFFF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
